# eBPF-Anticheat

./: .gitignore  CMakeLists.txt  README.md  flake.nix  makefile
app/: CMakeLists.txt  main.cpp
cmake/: Build.cmake  Environment.cmake  Packages.cmake
src/: CMakeLists.txt
src/agents/: CMakeLists.txt  mem_access_agent.cpp  module_tracker_agent.cpp  ptrace_agent.cpp
src/agents/include/: mem_access_agent.h  module_tracker_agent.h  ptrace_agent.h
src/common/include/: data_types.h  mem_data.h  module_data.h
src/eBPF_handlers/: CMakeLists.txt  mem_access_handler.cpp  module_handler.cpp  module_tracker_handler.cpp  ptrace_handler.cpp
src/eBPF_handlers/include/: mem_access_handler.h  module_handler.h  module_tracker_handler.h  ptrace_handler.h
src/eBPF_prog/: CMakeLists.txt  kmod_tracker.bpf.c  mem_access.bpf.c  module_tracker.bpf.c  ptrace.bpf.c
test/: CMakeLists.txt
